Fixing layout issues, improving score a bit

--- a/css/main.css
+++ b/css/main.css
@@ -251,7 +251,7 @@ a:hover {
   text-decoration: none;
 }
 
-#question {
+#answer {
   font-size: 60px;
   font-weight: 600;
 }
@@ -398,6 +398,12 @@ footer > p {
   color: #E7E7E5 !important;
   position: absolute;
   z-index: -1;
+}
+
+.btn {
+  width: 100px;
+  height: 50px;
+  font-size: 20px;
 }
 
 #android-apps {
